Bug 104826 - REGRESSION: r137481 caused a build failure with GTK
Summary: REGRESSION: r137481 caused a build failure with GTK
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Noam Rosenthal
URL:
Keywords:
Depends on:
Blocks: 104538
  Show dependency treegraph
 
Reported: 2012-12-12 11:17 PST by Noam Rosenthal
Modified: 2012-12-13 06:49 PST (History)
3 users (show)

See Also:


Attachments
Patch for landing (1.61 KB, patch)
2012-12-12 11:19 PST, Noam Rosenthal
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Noam Rosenthal 2012-12-12 11:17:56 PST
REGRESSION: r137481 caused a build failure with GTK
Comment 1 Noam Rosenthal 2012-12-12 11:19:15 PST
Created attachment 179086 [details]
Patch for landing
Comment 2 WebKit Review Bot 2012-12-12 12:43:18 PST
Comment on attachment 179086 [details]
Patch for landing

Clearing flags on attachment: 179086

Committed r137502: <http://trac.webkit.org/changeset/137502>
Comment 3 WebKit Review Bot 2012-12-12 12:43:21 PST
All reviewed patches have been landed.  Closing bug.
Comment 4 Csaba Osztrogonác 2012-12-13 02:51:53 PST
It would be great if you can reference in the original bug about this fixed 
in the future. Because one more build breaker patch landed during this build
break and I thought the build is still broken because of this bug. 

It's so easy to check the color of the bots from the bed with a 
smartphone, but it's so hard to check the huge build logs on it. :)
Comment 5 Noam Rosenthal 2012-12-13 06:49:51 PST
(In reply to comment #4)
> It would be great if you can reference in the original bug about this fixed 
> in the future. Because one more build breaker patch landed during this build
> break and I thought the build is still broken because of this bug. 
> 
> It's so easy to check the color of the bots from the bed with a 
> smartphone, but it's so hard to check the huge build logs on it. :)

Sorry, I was sure I'd done that.