REGRESSION: r137481 caused a build failure with GTK https://bugs.webkit.org/show_bug.cgi?id=104826

Unreviewed build fix.


* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::prepareBackingStore):
    Brought back #if PLATFORM(QT) to surround the dynamic_cast call.


Canonical link: https://commits.webkit.org/123056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137502 268f45cc-cd09-0410-ab3c-d52691b4dbfc